logs/Slang/chapter-6/6.10--implicit_continuous_assignment.sv.log
name: implicit_continuous_assignment
description: implicit declaration in continuous assignment tests
should_fail: 0
tags: 6.10
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.10--implicit_continuous_assignment.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.10--implicit_continuous_assignment.sv:11:9: error: use of undeclared identifier 'c'
	assign c = | (a | b);
	       ^
